fix(style): remove banner shadow in dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -127,6 +127,12 @@ ul {
   min-height: 300px;
 }
 
+@media (prefers-color-scheme: dark) {
+  .banner {
+    filter: none;
+  }
+}
+
 .banner-text {
   text-align: left;
   color: white;
